<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/register_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="40dp">

            <RelativeLayout
                android:id="@+id/toolbar_question"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/blue_toolbar_home_background">

                <ImageView
                    android:id="@+id/back_image_view"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/back_arrow"/>

                <ImageButton
                    android:id="@+id/close_app"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/close_icon"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/register_title_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/register_title_text"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/blue_login_title"/>

            <ImageView
                android:id="@+id/register_imageview"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_login_image"/>

            <LinearLayout
                android:id="@+id/fields_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                android:background="@color/blue_login_background"
                android:paddingBottom="40dp"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/register_subtitle_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/register_subtitle_text"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    app:startIconDrawable="@drawable/ic_email_white">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_register_text"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        app:counterEnabled="true"
                        app:endIconMode="clear_text"
                        app:helperText="Ingrese el su email ejemplo@ejemplo.com"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="10dp"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@android:drawable/ic_secure">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_register_text"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:imeOptions="actionNext"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nick_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="10dp"
                    app:startIconDrawable="@android:drawable/ic_secure">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nick_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nick_register_text"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/complete_name_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="10dp"
                    app:startIconDrawable="@android:drawable/ic_menu_info_details">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/complete_name_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/complete_name_register_text"
                        android:singleLine="true"
                        android:inputType="textPersonName"/>
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_login_button"
                    android:text="@string/continue_register_text"
                    android:textColor="@color/white"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancel_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:background="@drawable/rounded_register_button"
                    android:text="@string/cancel_register_text"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>